header z-index fix

--- a/chrisstyle.css
+++ b/chrisstyle.css
@@ -24,16 +24,15 @@ header {
   height: 50px;
   background-attachment: scroll;
   position: fixed; /* Make it stick/fixed */
-
   width: 100%; /* Full width */
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  z-index: 2000;
 }
 
 .landing-main {
   background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(116, 116, 116));
   background-position: center;
   background-repeat: no-repeat;
-
   width: 100%;
   height: 100vh;
   display: flex;
